--- a/css/style.css
+++ b/css/style.css
@@ -18,10 +18,6 @@ a:hover {
   color: #304684;
 }
 
- a:focus {
-  outline: none;
- }
-
   nav a {
     color: rgba(255, 255, 255, 0);
   }
@@ -40,33 +36,16 @@ nav {
   height: 34px;
 }
 
-.button-collapse {
-  margin-left: 10px;
-}
-
-.container {
-  padding: 0 1.5rem;
-  margin: 0 auto;
-  max-width: 1280px;
-  width: 100%;
-}
-
-/* Hides shit */
+/* Hides */
 .hidden {
     text-indent: -9999px;
     visibility: hidden;
     display: none;
 }
-
-/* Creates a responsive wrapper that makes our content scale nicely */
-.inner {
-}
-
 /* Centres vertically yo. (IE8+) */
 .cat-hero {
     padding-top: 2em;
 }
-
 .kioshi-cat {
     margin-left: 33%;
     width: 33%;
@@ -80,185 +59,6 @@ h1.page-title {
     margin: 1.5rem 0 1.68rem 0;
     text-align: center;
 }
-.btn {
-  background-color: #6584DA;
-  color: #BDBBD2!important;
-  border-radius: 0px;
-}
-.btn:hover {
-  background-color: #6687E2;
-  color: #D2D1DC!important;
-}
-.col.s12.m8.offset-m2.l4.offset-l4.z-depth-1{
-  background: aliceblue;
-}
-
-/* Wraps the main content & footer */
-.site-wrapper {
-    position: relative;
-    z-index: 10;
-    min-height: 100%;
-    background: #3497db;
-    -webkit-transition: -webkit-transform 0.5s ease;
-            transition: transform 0.5s ease;
-}
-
-body.nav-opened .site-wrapper {
-    overflow-x: hidden;
-    -webkit-transform: translate3D(-240px, 0, 0);
-        -ms-transform: translate3D(-240px, 0, 0);
-            transform: translate3D(-240px, 0, 0);
-    -webkit-transition: -webkit-transform 0.3s ease;
-            transition: transform 0.3s ease;
-}
-
-/* ==========================================================================
-   3.5. Sections - The main styles sections
-   ========================================================================== */
-
-.section-container {
-  min-height: 200px;
-  background: #349edb;
-}
-
-section {
-    position: relative;
-    background: transparent;
-    color: #fff;
-    text-align: center;
-}
-
-section::before,
-section::after {
-    content: '';
-    pointer-events: none;
-}
-
-
-
-.intro-row {
-    margin-top: 50px;
-}
-
-.blog-float {
-    position: fixed;
-}
-/* ==========================================================================
-   4. General - The main styles for the the theme
-   ========================================================================== */
-
-/* Big cover image on the home page */
-.main-header {
-    position: relative;
-    display: table;
-    width: 100%;
-    height: 100vh;
-    margin-bottom: 5rem;
-    text-align: center;
-    background: #222 no-repeat center center;
-    background-size: cover;
-    overflow: hidden;
-}
-
 .kioshi {
     background: rgba(0,146,241,1);
-}
-
-
-/* Create a bouncing scroll-down arrow on homepage with cover image */
-.scroll-down {
-    display: block;
-    position: absolute;
-    z-index: 100;
-    bottom: 45px;
-    left: 50%;
-    margin-left: -16px;
-    width: 34px;
-    height: 34px;
-    font-size: 34px;
-    text-align: center;
-    text-decoration: none;
-    color: rgba(255,255,255,0.7);
-    -webkit-transform: rotate(-90deg);
-    -ms-transform: rotate(-90deg);
-    transform: rotate(-90deg);
-    -webkit-animation: bounce 4s 2s infinite;
-    animation: bounce 4s 2s infinite;
-}
-
-/* Stop it bouncing and increase contrast when hovered */
-.scroll-down:hover {
-    color: #fff;
-    -webkit-animation: none;
-    animation: none;
-}
-
-/* Put a semi-opaque radial gradient behind the icon to make it more visible
-   on photos which happen to have a light background. */
-.home-template .main-header:after {
-    display: block;
-    content: " ";
-    width: 150px;
-    height: 130px;
-    border-radius: 100%;
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    margin-left: -75px;
-    background: radial-gradient(ellipse at center,  rgba(0,0,0,0.15) 0%,rgba(0,0,0,0) 70%,rgba(0,0,0,0) 100%);
-}
-
-/* Hide when there's no cover image or on page2+ */
-.no-cover .scroll-down,
-.no-cover.main-header:after,
-.archive-template .scroll-down,
-.archive-template .main-header:after {
-    display: none
-}
-/*
-@media only screen and (min-width: 600px) {
-
-   h1.page-title {font-size: 1.8em; margin: 1.8rem 0 1.68rem 0;}
-
-
-}
-
-@media only screen and (min-width: 768px) {
-
-   h1.page-title { font-size: 2em; }
-
-}
-@media only screen and (min-width: 922px) {
-
-   h1.page-title { font-size: 2em; }
-
-}
-@media only screen and (min-width: 1200px) {
-
-   h1.page-title { font-size: 2em; }
-
-}*/
-
-
-@media only screen and (min-width : 993px) {
-  nav a.button-collapse {
-    display: block;
-  }
-}
-
-@media only screen and (min-width: 601px) {
-  .container {
-    width: 99%;
-  }
-}
-
-@media only screen and (min-width: 993px) {
-  .container {
-    width: 98%;
-  }
-}
-@media only screen and (min-width: 601px) {
-  nav, nav .nav-wrapper i, nav a.button-collapse, nav a.button-collapse i {
-    height: 34px;
-    line-height: 100px;
 }
