--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,4 @@
-
-	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+	<script src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/init.js"></script>
 	<!-- <footer class="page-footer blue">
