--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
     </ul>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a href=""></a></li>
-      <li><a href="http://ampelos.github.io">TECH</a></li>
+      <li><a href="http://development.house">Development</a></li>
       <li><a href="http://minetoast.github.io">MINECRAFT SERVER</a></li>
     </ul>
   </nav>
