--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,12 +8,16 @@
       <li><a href="http://minetoast.github.io">MINECRAFT SERVER</a></li>
     </ul>
   </nav>
+
   <div class="kioshi">
-    <div class="cat-hero">
-          <object class="kioshi-cat" type="image/svg+xml" data="images/kioshi.svg" alt="Kioshi"></object>
+    <div class="row">
+      <div class="cat-hero">
+          <object class="kioshi-cat col s12" type="image/svg+xml" data="images/kioshi.svg" alt="Kioshi"></object>
+      </div>
     </div>
-    <div class="main-header-content inner">
-      <h1 class="page-title">Kioshi Pictures</h1>
-      <h2 class="page-description"></h2>
-    </div>
+      <div class="row">
+        <div class="main-header-content inner">
+          <h1 class="page-title">Kioshi Pictures</h1>
+        </div>
+      </div>
   </div>
