added about page

--- a/_includes/index_header.html
+++ b/_includes/index_header.html
@@ -1,10 +1,11 @@
   <nav>
     <ul class="left hide-on-med-and-down">
-      <li class="active"><a href="http://kioshi.pictures">KIOSHI PICTURES</a></li>
+      <li class="active"><a href="/">KIOSHI PICTURES</a></li>
     </ul>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a href=""></a></li>
-      <!--<li><a href="http://development.house">Development</a></li>-->
+      <li><a href="/about">About</a></li>
+      <li><a href="http://development.house">Development</a></li>
       <li><a href="http://minetoast.github.io">MINECRAFT SERVER</a></li>
     </ul>
   </nav>
@@ -12,7 +13,7 @@
   <div class="kioshi">
     <div class="row">
       <div class="cat-hero">
-          <object class="kioshi-cat col s12" type="image/svg+xml" data="images/kioshi.svg" alt="Kioshi"></object>
+          <object class="kioshi-cat col s12" type="image/svg+xml" data="/images/kioshi.svg" alt="Kioshi"></object>
       </div>
     </div>
       <div class="row">
