--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
-	<script src="js/jquery.min.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
-	<script type="text/javascript" src="js/init.js"></script>
+	<script src="/js/jquery.min.js"></script>
+	<script type="text/javascript" src="/js/main.js"></script>
+	<script type="text/javascript" src="/js/init.js"></script>
 	<!-- <footer class="page-footer blue">
 		<div class="footer-copyright">
 		  <div class="container">
