--- a/_includes/index_header.html
+++ b/_includes/index_header.html
@@ -10,15 +10,17 @@
     </ul>
   </nav>
 
-  <div class="kioshi">
-    <div class="row">
-      <div class="cat-hero">
+  <div class="row">
+    <div class="kioshi cat-hero col s6">
+        <div class="row">
           <object class="kioshi-cat col s12" type="image/svg+xml" data="/images/kioshi.svg" alt="Kioshi"></object>
-      </div>
-    </div>
-      <div class="row">
-        <div class="main-header-content inner">
-          <h1 class="page-title">Kioshi Pictures</h1>
         </div>
-      </div>
+        <div class="row">
+          <div class="main-header-content inner">
+            <h1 class="page-title">Kioshi Pictures</h1>
+          </div>
+        </div>
+    </div>
+    <div class="market-hero col sm6">
+    </div>
   </div>
