adding a white col s6

--- a/_sass/components/_variables.scss
+++ b/_sass/components/_variables.scss
@@ -1,5 +1,5 @@
 /*** Colors ***/
-$primary-color: rgba(53,27,52,1) !default;
+$primary-color: rgba(48,70,132,.8);
 $primary-color-light: lighten($primary-color, 15%) !default;
 $primary-color-dark: darken($primary-color, 15%) !default;
 
