--- a/_includes/index_header.html
+++ b/_includes/index_header.html
@@ -6,7 +6,7 @@
       <li><a href=""></a></li>
       <li><a href="/about">About</a></li>
       <li><a href="http://development.house">Development</a></li>
-      <li><a href="http://minetoast.github.io">MINECRAFT SERVER</a></li>
+      <li><a href="http://minetoast.github.io">MINECRAFT</a></li>
     </ul>
   </nav>
 
@@ -21,6 +21,6 @@
           </div>
         </div>
     </div>
-    <div class="market-hero col sm6">
+    <div class="market-hero col s6">
     </div>
   </div>
