--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a href=""></a></li>
       <!--<li><a href="http://development.house">Development</a></li>-->
-      <li><a href="http://minetoast.github.io">MINECRAFT SERVER</a></li>
+      <!--<li><a href="http://minetoast.github.io">MINECRAFT SERVER</a></li>-->
     </ul>
   </nav>
   <div class="kioshi">
